# DataAnalytics

./: cosine_similarity_distribution.py  pyproject.toml
Classification/: RandomForest.ipynb  SVM.ipynb
Classification/Decision Tree/: TitanicSurvival.ipynb
Classification/Decision Tree/ProductPurchase/: SocialNetwork.ipynb
LinearRegression/: LinearRegression_HousingPrices.ipynb
LinearRegression/Car Price Prediction/: carprediction.ipynb  clean_heatmap.py  clean_simple_heatmap.py  fix_heatmap.py  fix_sort_values.py
LinearRegression/E-Commerce Price Prediction/: ecommerce.ipynb
LinearRegression/HousingPrices_KingsCity/: HousingSales_KC.ipynb
LinearRegression/Medical Cost Prediction/: MedicalCostPred.ipynb
LogisticRegression/: Iris.ipynb  Iris_tuning.ipynb  cancer.ipynb
LogisticRegression/HeartDiseasePrediction/: heartdisease.ipynb
LogisticRegression/TelcoCustomerChurn/: TelcoCustomerChurn.ipynb
notebooks/Linear Regression/: HousingSales_KC.ipynb  LinearRegression_HousingPrices.ipynb
